--- a/package.json
+++ b/package.json
@@ -10,5 +10,8 @@
   "description": "",
   "devDependencies": {
     "tailwindcss": "^3.4.13"
+  },
+  "dependencies": {
+    "remixicon": "^4.3.0"
   }
 }
